fix: aligned cross icon to center

--- a/style.css
+++ b/style.css
@@ -47,6 +47,9 @@ ul li span {
   line-break: 40px;
   text-align: center;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 ul li span:hover {
